@@ -161,7 +161,6 @@ if test "$ac_cv_c_compiler_gnu" = "yes"; then
     sdcc_cv_MM="-M"
   fi
   rm -f _test_.*)
-  M_OR_MM=$sdcc_cv_MM
 
   # This is the first time when CFLAGS are set/modified!!
   bor_IS_VALID_OPTION(ggdb)
@@ -175,16 +174,19 @@ if test "$ac_cv_c_compiler_gnu" = "yes"; then
   fi
 
   WALL_FLAG="-Wall"
+  C99_FLAG="--std=c99"
+  MAKEDEP="$CC $sdcc_cv_MM"
 else
   bor_IS_SUNPRO
   if test "$bor_cv_c_compiler_sunpro" = "yes"; then
-    M_OR_MM="-xM1"
-    WALL_FLAG=
     CFLAGS="-xO2 $CFLAGS"
+    WALL_FLAG=
+    C99_FLAG="-xc99"
+    MAKEDEP="$CC -xM1"
   fi
 fi
 
-AC_SUBST(M_OR_MM)
+AC_SUBST(MAKEDEP)
 AC_SUBST(WALL_FLAG)
 
 
